--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -28,8 +28,8 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="5. Asset Warranty Expire Report" action="#{reportController.navigateToAssetWarentyExpireReport()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="6. Asset GRN Report" action="#{reportController.navigateToAssetGrnReport()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="7. Asset Transfer Report" action="#{reportController.navigateToAssetTransferReport()}" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="8. Item Loacation History" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="9. Asset AMC Expiry" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="8. Item Loacation History"/>
+                                        <p:commandButton   class="w-100"  ajax="false" value="9. Asset AMC Expiry"  action="#{reportController.navigateToAssetAmcExpiryReport()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="10. Asset Warranty Expiry" />
                                         <p:commandButton   class="w-100"  ajax="false" value="11. AMC" />
                                         <p:commandButton   class="w-100"  ajax="false" value="12. Work Order" />
