--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -31,7 +31,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="8. Item Loacation History"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="9. Asset AMC Expiry"  action="#{reportController.navigateToAssetAmcExpiryReport()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="10. Asset Warranty Expiry" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="11. AMC" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="11. AMC" action="#{reportController.navigateToAssetAmcReport()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="12. Work Order" />
                                         <p:commandButton   class="w-100"  ajax="false" value="13. Preventive Maintenance" />
                                         <p:commandButton   class="w-100"  ajax="false" value="14. Modality Down Time" />
