Close Issue#1409 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/assets/assest_amc_expiry_report.xhtml
+++ b/src/main/webapp/reports/assets/assest_amc_expiry_report.xhtml
@@ -11,7 +11,7 @@
         <ui:composition template="/reports/index.xhtml" class="w-100">
             <ui:define name="subcontent">
                 <h:form>
-                    <p:panel header="Asset Transfer Report" class="w-100 p-1">
+                    <p:panel header="Asset AMC Expiry Report" class="w-100 p-1">
                         <h:panelGrid columns="5" class="w-100">
 
                             <p:outputLabel value="From Date" for="fromDate"></p:outputLabel>
