--- a/src/main/webapp/reports/assets/asset_warranty_expire_report.xhtml
+++ b/src/main/webapp/reports/assets/asset_warranty_expire_report.xhtml
@@ -11,7 +11,7 @@
         <ui:composition template="/reports/index.xhtml" class="w-100 border">
             <ui:define name="subcontent">
                 <h:form class="w-100">
-                    <p:panel header="Asset Register" class="w-100">
+                    <p:panel header="Asset Warrenty Expire Report" class="w-100">
                         <h:panelGrid columns="5" class="w-100 ">
                             <p:outputLabel value="Institution/Branch" for="institutionMenu"></p:outputLabel>
                             <p:selectOneMenu value="#{reportController.institution}" id="institutionMenu" required="true">
