--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -175,7 +175,7 @@
                                     <p:accordionPanel>
                                         <p:tab title="Leave">
                                             <div class="d-grid gap-2">
-                                                <p:commandButton   class="w-100"  ajax="false" value="1. Leave Report" />
+                                                <p:commandButton   class="w-100"  ajax="false" value="1. Leave Report" action="#{reportController.navigateToLeaveReport()}" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="2. Leave Report Summary" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="3. Late Leave(Detail)" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="4.Leave Summary Report" />
