--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -176,7 +176,7 @@
                                         <p:tab title="Leave">
                                             <div class="d-grid gap-2">
                                                 <p:commandButton   class="w-100"  ajax="false" value="1. Leave Report" action="#{reportController.navigateToLeaveReport()}" />
-                                                <p:commandButton   class="w-100"  ajax="false" value="2. Leave Report Summary" />
+                                                <p:commandButton   class="w-100"  ajax="false" value="2. Leave Report Summary" action="#{reportController.navigateToLeaveReportSummery()}" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="3. Late Leave(Detail)" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="4.Leave Summary Report" />
                                             </div>
