Closes Issue#1417 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -34,7 +34,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="11. AMC" action="#{reportController.navigateToAssetAmcReport()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="12. Work Order" action="/reports/assets/work_order_report" />
                                         <p:commandButton   class="w-100"  ajax="false" value="13. Preventive Maintenance" action="/reports/assets/pretentive_maintainance_report"/>
-                                        <p:commandButton   class="w-100"  ajax="false" value="14. Modality Down Time" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="14. Modality Down Time" action="/reports/assets/modality_downtime"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="15. Asset Disposal Report (Sale Disposal, Write-off)" />
                                         <p:commandButton   class="w-100"  ajax="false" value="16. Purchase Rate movement" />
                                     </div>
