--- a/src/main/webapp/reports/HRReports/department_report.xhtml
+++ b/src/main/webapp/reports/HRReports/department_report.xhtml
@@ -9,23 +9,22 @@
         <ui:composition template="/reports/index.xhtml">
             <ui:define name="subcontent">
                 <h:form >
-                    <p:panel header="Deoartment Report" >
-                        <h:panelGrid class="w-100" >
+                    <p:panel header="Department Report" >
+                        <h:panelGrid columns="2">
 
-
-                            <p:outputLabel value="Institution" >
+                            <p:outputLabel value="Institution" class="mx-2" >
                             </p:outputLabel>
                             <p:selectOneMenu
-                                value="#{reportController.institution}" 
+                                value="#{reportController.fromInstitution}" 
                                 filter="true"
                                 class="w-100 ">
                                 <f:selectItem itemLabel="All" ></f:selectItem>
-                                <f:selectItems value="#{reportController.institution}"
+                                <f:selectItems value="#{institutionController.collectingCentresAndManagedInstitutions}"
                                                var="d"
                                                itemLabel="#{d.name}"
                                                itemValue="#{d}" ></f:selectItems>
                             </p:selectOneMenu>
-                        </h:panelGrid>>
+                        </h:panelGrid>
                         <div class="d-flex align-items-center my-2">
                             <p:commandButton class="m-2" ajax="false" value="Process" action="null" >
                             </p:commandButton>
@@ -33,7 +32,6 @@
                                              action="null">
                             </p:commandButton>
                         </div>
-
 
                         <p:dataTable id="tbl" value="" 
                                      paginator="true"
@@ -50,11 +48,7 @@
                             <p:column headerText="Institution Name">
                                 <h:outputText value="" />
                             </p:column>
-                            
-
                         </p:dataTable>
-
-
                     </p:panel>
 
                 </h:form>
