Closes #1424 Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -178,7 +178,7 @@
                                                 <p:commandButton   class="w-100"  ajax="false" value="1. Leave Report" action="#{reportController.navigateToLeaveReport()}" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="2. Leave Report Summary" action="#{reportController.navigateToLeaveReportSummery()}" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="3. Late Leave(Detail)" action="#{reportController.navigateToLateLeaveDetails()}" />
-                                                <p:commandButton   class="w-100"  ajax="false" value="4.Leave Summary Report" />
+                                                <p:commandButton   class="w-100"  ajax="false" value="4.Leave Summary Report" action="#{reportController.navigateToLeaveSummeryReport()}" />
                                             </div>
 
 
