Closes #1427 Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -188,7 +188,7 @@
                                     <p:accordionPanel>
                                         <p:tab title="Shift">
                                             <div class="d-grid gap-2">
-                                                <p:commandButton   class="w-100"  ajax="false" value="1. Staff Shift Report" />
+                                                <p:commandButton   class="w-100"  ajax="false" value="1. Staff Shift Report" action="#{reportController.navigateToStaffShiftReport()}"/>
                                                 <p:commandButton   class="w-100"  ajax="false" value="2. Entered Shift Report" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="3. Roaster Table and Verify Time Report" />
                                             </div>
