--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -190,7 +190,7 @@
                                             <div class="d-grid gap-2">
                                                 <p:commandButton   class="w-100"  ajax="false" value="1. Staff Shift Report" action="#{reportController.navigateToStaffShiftReport()}"/>
                                                 <p:commandButton   class="w-100"  ajax="false" value="2. Entered Shift Report" />
-                                                <p:commandButton   class="w-100"  ajax="false" value="3. Roaster Table and Verify Time Report" />
+                                                <p:commandButton   class="w-100"  ajax="false" value="3. Roaster Table and Verify Time Report" action="#{reportController.navigateToRosterTimeAndVerifyTime()}" />
                                             </div>
 
                                         </p:tab>
