Closes #1441 Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -198,7 +198,7 @@
                                     <p:accordionPanel>
                                         <p:tab title="Summary">
                                             <div class="d-grid gap-2">
-                                                <p:commandButton   class="w-100"  ajax="false" value="1. Head Count" />
+                                                <p:commandButton   class="w-100"  ajax="false" value="1. Head Count" action="#{reportController.navigateToHeadCountReport()}" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="2. Employee Worked Day Report" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="3. Employee Worked Day Report(Salary Cycle)" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="4. Month End Employee Working Time + Over Time Report" />
