Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/opd/patient.xhtml
+++ b/src/main/webapp/opd/patient.xhtml
@@ -121,12 +121,14 @@
                                                  action="#{patientController.navigateToInwardAppointmentFromPatientProfile()}"
                                                  ajax="false"
                                                  styleClass="mx-2">
-                                    <p:commandButton value="Receive Deposits"
-                                                     action="#{patientController.navigateToReceiveDepositsFromPatientProfile()}"
-                                                     ajax="false"
-                                                     styleClass="mx-2">
+                                </p:commandButton>
+                                <p:commandButton value="Receive Deposits"
+                                                 action="#{patientController.navigateToReceiveDepositsFromPatientProfile()}"
+                                                 ajax="false"
+                                                 styleClass="mx-2">
 
-                                    </p:commandButton>
+                                </p:commandButton>
+                                <p:messages ></p:messages>
                             </div>
 
                         </div>
