Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/paymentMethod/ewallet.xhtml
+++ b/src/main/webapp/resources/paymentMethod/ewallet.xhtml
@@ -21,7 +21,7 @@
             </p:selectOneMenu>
             <p:inputText autocomplete="off"   value="#{cc.attrs.paymentMethodData.ewallet.comment}"  id="memo"/>
             <p:watermark value="Memo" for="memo" />
-            <p:watermark value="Card Ref. No." for="refno" />
+            <p:watermark value="eWallet Ref. No." for="refno" />
         </h:panelGrid>
     </cc:implementation>
 </html>
